use lite version of java but install it as system